# userun

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml
src/userun/: __init__.py
src/userun/cli/: title.txt  usecli.config.toml
src/userun/cli/commands/: concurrent_command.py
src/userun/cli/templates/: command.py.j2
src/userun/cli/themes/: default.toml
tests/: smoke_test.py  test_concurrent_command.py
