[project]
name = "userun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "usecli>=0.1.48",
]

[project.scripts]
userun = "usecli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "isort>=8.0.1",
  "poethepoet>=0.42.1",
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "ty>=0.0.21",
  "usechange>=0.1.28",
]

[tool.deptry]
known_first_party = ["userun"]

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncio"]
DEP005 = ["asyncio"]

[tool.poe.tasks]
dev = "uv run main.py"
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
release = "uv run usechange release"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
