[project]
name = "userun"
version = "0.1.6"
description = "Run multiple shell commands concurrently with readable, prefixed output."
readme = "README.md"
authors = [{ name = "Edward Boswell", email = "thememium@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = ["asyncio>=4.0.0", "usecli>=0.1.48"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/thememium/userun"
Documentation = "https://github.com/thememium/userun"
Repository = "https://github.com/thememium/userun.git"
Issues = "https://github.com/thememium/userun/issues"
Changelog = "https://github.com/thememium/userun/blob/master/CHANGELOG.md"

[project.scripts]
userun = "usecli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "deptry>=0.24.0",
  "isort>=8.0.1",
  "poethepoet>=0.42.1",
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "ty>=0.0.21",
  "usechange>=0.1.28",
]

[tool.deptry]
known_first_party = ["userun"]

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncio"]
DEP005 = ["asyncio"]

[tool.poe.tasks]
dev = "uv run userun"
clean-full = "sh -c 'uv run isort . && uv run ruff check . --fix && uv run ruff format . && uv run deptry . && uv run ty check'"
clean = "sh -c 'uv run isort . && uv run ruff format .'"
test = "uv run pytest tests/ -v"
sort = "uv run isort ."
lint = "uv run ruff check ."
format = "uv run ruff format ."
deptry = "uv deptry ."
typecheck = "uv run ty check"
release = "uv run usechange release"
concurrent-demo = "uv run userun concurrent -n server,lint,test \"python3 -m http.server 8000\" \"uv run poe lint\" \"uv run poe test\""

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ty]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.ty.rules]
# Ty uses rule = "level" format (error, warn, ignore)
# See all rules at: https://docs.astral.sh/ty/reference/rules/
